<resources>
    <string name="app_name">Scanner Document</string>
    <string name="app_logo">App Logo</string>
    <string name="icon_search">Icon Search</string>
    <string name="todo">что-то</string>
    <string name="icon_premium">Icon Premium</string>
    <string name="storage">Хранилище</string>
    <string name="icon_cloud">Icon Cloud</string>
    <string name="more_space">Больше места</string>
    <string name="icon_add">Icon Add</string>
    <string name="icon_scan">Icon Scan</string>
    <string name="smart_scan">Умное\n сканирование</string>
    <string name="pdf_tools">Инструменты\n PDF</string>
    <string name="import_image">Импорт\n изображения</string>
    <string name="import_image2">Импорт изображения</string>
    <string name="import_file">Импорт\n файлов</string>
    <string name="import_file2">Импорт файлов</string>
    <string name="scan_document">Сканировать\n ID-документ</string>
    <string name="image_to_text">Изображение\n в текст</string>
    <string name="improved_portrait">Улучш.\n портрет</string>
    <string name="all">Все</string>
    <string name="last_documents">Последние документы</string>
    <string name="icon_file">Icon File</string>
    <string name="empty_list_text">Недавних файлов нет</string>
    <string name="info_text">250 Мб из 300 Мб использовано</string>
    <string name="files">Файлы</string>
    <string name="tools">Инструменты</string>
    <string name="profile">Профиль</string>
    <string name="home">Домой</string>
    <string name="button_scan">Button Scan</string>
    <string name="scan_new_documents">Сканировать новые документы</string>
    <string name="title">Задание 1 - экраны системы измеряющей диапазон наклон…</string>
    <string name="date">09.07.22 11:50</string>
    <string name="_24">24</string>
    <string name="document_preview">Document Preview</string>
    <string name="note">Заметка</string>
    <string name="cutaway">Визитка</string>
    <string name="ppt">PPT</string>
    <string name="icon_arrow_left">Icon Arrow Left</string>
    <string name="search">Поиск</string>
    <string name="signup_sign_in">Регистрация/Вход</string>
    <string name="register_info_text"><font color="#8D9CA5">Новый номер телефона или электронная почта будут зарегистрированы автоматически. </font><font color="#36A1EA">Узнать об аккаунте Scanner Document</font></string>
    <string name="next_move">Следующий шаг</string>
    <string name="privacy_policy_text"><font color="#8D9CA5">Согласиться с</font> <font color="#36A1EA">условиями обслуживания и Политикой конфиденциальности</font></string>
    <string name="number_email">Номер телефона / Эл. почта</string>
    <string name="login">Login</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="another_way">Другие способы входа</string>
    <string name="confirm_data">Подтвердите данные</string>
    <string name="region_screen_title">Подтвердите страну/регион и номер\nвашего мобильного телефона</string>
    <string name="region_screen_subtitle">Новый номер телефона или электронная почта будут\nзарегистрированы автоматически.</string>
    <string name="region">Регион</string>
    <string name="country">Страна</string>
    <string name="confirm_phone">Подтвердите телефон</string>
    <string name="register_account">Зарегистрировать новый аккаунт</string>
    <string name="code_confirmation">Код подтверждения отправлен на номер\n+7 89994578563</string>
    <string name="confirm_code">Подтвердить код</string>
    <string name="email">Эл. почта</string>
    <string name="retry_text">Если вы не можете найти письмо во Входящих или в папке Спам, нажмите здесь для повторной отправки</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-mail</string>
    <string name="verify_identity">Подтвердить личность</string>
    <string name="permission_manager">Permission Manager</string>
    <string name="location">Местоположение</string>
    <string name="new_tag">Добавить новый тег</string>
    <string name="task_1_hint">Задание 1 - экраны систе…</string>
    <string name="enter">Войти</string>
    <string name="google_drive">Google Drive</string>
    <string name="dropbox">Dropbox</string>
    <string name="evernote">Evernote</string>
    <string name="onedrive">OneDrive</string>
    <string name="onenote">OneNote</string>
    <string name="box">Box</string>
    <string name="_1_1_442kb">Выбрано 1/1 страниц. Размер: 442KB</string>
    <string name="blue_box_sign">Blue box sign</string>
    <string name="google_triangle_sign">Google triangle sign</string>
    <string name="evernote_elephant_sign">evernote elephant sign</string>
    <string name="one_drive_cloud_sign">one drive cloud sign</string>
    <string name="one_note_note_book_sign">one note book sign</string>
    <string name="watch_history">Посмотреть историю</string>
    <string name="all_move_to">Переместить в</string>
    <string name="there_are_no_folders_here">В этом каталоге папок нет</string>
    <string name="move_1">Переместить (1)</string>
    <string name="id">ID-документ</string>
    <string name="entered_tags">|Тег входных данных</string>
    <string name="my_tags">Мои теги</string>
    <string name="merge_method">Выберите метод объединения</string>
    <string name="merge_dnt_save_old">Объеденить, но не сохранять старые документы</string>
    <string name="merge_and_save_old">Объеденить и сохранить старые документы</string>
    <string name="to_be_canceled">Отмена</string>
    <string name="other">ДРУГОЕ</string>
    <string name="_9">9</string>
    <string name="word">Word</string>
    <string name="ru_v">В</string>
    <string name="visa_card">Визитка</string>
    <string name="ru_z">З</string>
    <string name="ru_d">Д</string>
    <string name="notes_board">Доска для записей</string>
    <string name="i">I</string>
    <string name="_2">2</string>
    <string name="p">P</string>
    <string name="w">W</string>
    <string name="big_size">Размер файла превышает 1MB. Его можно уменьшить</string>
    <string name="small_size">Маленький размер (1.31MB)</string>
    <string name="medium_size">Средний размер (1.83MB)</string>
    <string name="original_size">Исходный размер (2.62MB)</string>
    <string name="take_a_try">Попробовать!</string>
    <string name="ideal_saving">Идеальное сохранение\n оригинального формата файла</string>
    <string name="_1_chosen">1 выбрано</string>
    <string name="to_be_share">Поделиться</string>
    <string name="merge">Объеденить</string>
    <string name="six_photos">Выбрано 6 фото</string>
    <string name="copy_link">Скопировать\nссылку</string>
    <string name="send_to_pc">Отправить\nна PC</string>
    <string name="viber">Viber</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="send_to_pc_1_line">Отправить на PC</string>
    <string name="http_cscan_co">1. Введите d.cscan.co в браузере</string>
    <string name="d_cscan_com">d.cscan.com</string>
    <string name="copy_1">Копировать (1)</string>
    <string name="blue_back_arrow_icon">Blue back arrow icon</string>
    <string name="_09_07_22">Новая папка 09.07.22</string>
    <string name="scr">экр</string>
    <string name="_09_07_22_11_50">09.07.22 11:50</string>
    <string name="magnifier_image">Magnifier image</string>
    <string name="remove_search_request_x_button">Remove search request X button</string>
    <string name="image_scanned_by_user">image scanned by user</string>
    <string name="image_of_a_file">image of a file</string>
    <string name="but">Но</string>
    <string name="blue_folder_image">Blue folder image</string>
    <string name="small_file_image">small file image</string>
    <string name="three_dots_menu_button">Three dots menu button</string>
    <string name="no_search_data">Результаты поиска отсутствуют</string>
    <string name="big_blue_magnifier_image">Big Blue Magnifier Image</string>
    <string name="files_text">Файлы</string>
    <string name="dark_blue_three_dots_menu">Dark Blue Three Dots Menu</string>
    <string name="_10">Все (10)</string>
    <string name="task_sample">Задание 1 - экраны системы измеряющей диапазон наклон…</string>
    <string name="task_sample_small">Задание 1 - экраны системы измеряющей</string>
    <string name="shift">Переместить</string>
    <string name="copy">Копировать</string>
    <string name="stamp">К документу будет добавлен водяной знак Scanner Document. Если документ предполагается использовать для официальных случаев, рекомендуем удалить водяной знак.</string>
    <string name="share">Поделиться</string>
    <string name="delete_stamp">Удалить знак</string>
    <string name="rename">Переименовать</string>
    <string name="file_name">Название файла</string>
    <string name="cancel">Отмена</string>
    <string name="settings_for_document">Настройки имени документа</string>
    <string name="sort_manually">Сортир. вручную</string>
    <string name="ready">Готово</string>
    <string name="delete_file">Удаление файла</string>
    <string name="explained">Удаленные элементы могут быть восстановлены с веб-сайта в течении 7 дней. Подтвердить удаление?</string>
    <string name="delete">Удалить</string>
    <string name="block">Заблокировать</string>
    <string name="download">Загрузка</string>
    <string name="save_to_gallery">Сохранить в “Галерею"</string>
    <string name="desktop">Добавить ярлык на домашний экран</string>
    <string name="tags">Теги</string>
    <string name="new_folder">Новая папка 09.07.22</string>
    <string name="icon_to_desktop">Добавить значок на рабочем столе</string>
    <string name="move_to">Переместить</string>
    <string name="scan">Сканировать</string>
    <string name="scanner_with_qr_inside">scanner with qr inside</string>
    <string name="scan_using_your_phone">2. Отсканируйте QR-код с\n помощью мобильного телефона</string>
    <string name="icon_arrow_left_icon">Icon Arrow Left Icon</string>
    <string name="mail_mail_ru">mail@mail.ru</string>
    <string name="id_document">ID-документ</string>
    <string name="auto_flash_icon">Auto Flash Icon</string>
    <string name="hd_icon">HD Icon</string>
    <string name="more_icon">More Icon</string>
    <string name="photo_on_id">Фото на ID</string>
    <string name="text_recognition">Распознование текста</string>
    <string name="photo_to_word">Фото в Word</string>
    <string name="documents">Документы</string>
    <string name="questionnaire">Вопросник</string>
    <string name="improved_portrait_text">Улучшенный портрет</string>
    <string name="book">Книга</string>
    <string name="more">Еще</string>
    <string name="account_long">Учетная запись</string>
    <string name="change">Изменить</string>
    <string name="delete_account">Удалить учетную запись</string>
    <string name="delete_account_hint"><![CDATA[Перед удалением учетной записи перейдите в раздел “Профиль” > “Cинхронизировать”, чтобы убедиться, что все ваши файлы синхронизированны]]></string>
    <string name="permission_manager_subtitle">Для правильной работы, Сканеру документов потребуются следующие системный разрешения</string>
    <string name="camera">Камера</string>
    <string name="permission_manager_camera_subtitle">Для сканирования и загрузки\nизображений</string>
    <string name="allowed">Разрешено</string>
    <string name="notifications">Уведомления</string>
    <string name="permission_manager_notifications_subtitle">Получать уведомления о изменениях\nв аккаунте, скидках и т.д</string>
    <string name="tune">Настроить</string>
    <string name="permission_manager_storage_subtitle">Для организации документов и\nсохранения сканов</string>
    <string name="smart_ppt_scanner">Умный PPT-сканнер</string>
    <string name="better_then_you_done">Четче, чем то, что вы делали</string>
    <string name="ppt_scanner_icon">PPT Scanner Icon</string>
    <string name="start_scan">Начать сканирование</string>
</resources>