<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.EditEmailFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitish">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_arrow_left_icon"
            android:src="@drawable/ic_arrow_left" />

        <TextView
            style="@style/DefaultToolbarTitle"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/account_long" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_mail_ru"
                    android:textColor="@color/light_grey"
                    android:textSize="14sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/changeEmailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textColor="@color/primary"
                android:textSize="14sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nextMoveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            android:textColor="#FA6364"
            app:backgroundTint="#fdcece"
            app:cornerRadius="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/delete_account_hint"
            android:textColor="#FA6364"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>