<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="30dp">

    <TextView
        android:id="@+id/tv_send_to_pc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:text="@string/send_to_pc_1_line"
        android:textColor="@color/text_color"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_enter_into_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/http_cscan_co"
        android:textColor="@color/text_color" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_for_web_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_globe"
            android:drawablePadding="8dp"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:text="@string/d_cscan_com"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="16sp" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tv_scan_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/scan_using_your_phone"
        android:textColor="@color/text_color" />

    <ImageView
        android:id="@+id/iv_scan_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/scanner_with_qr_inside"
        android:src="@drawable/ic_scanner_big" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/scan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        app:cornerRadius="8dp" />

</LinearLayout>